testdata/zkc/invalid/type_07.zkc
//error:2:1-15:cyclic definition for Y
type outer1 = outer2
type outer2 = Y
type Y = Z
type Z = Y
